[tool.poetry]
name = "topacademy_api"
version = "1.0"
description = "A library for Python that provides an easy interface to interact with the TOP Academy resources"
authors = ["Egor A. Balenko <contact@dust0n.ru>"]
license = "GPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
